--- a/app/design/adminhtml/default/default/template/api/rolesedit.phtml
+++ b/app/design/adminhtml/default/default/template/api/rolesedit.phtml
@@ -50,7 +50,7 @@
     }
 
     const tree = new MahoTree('resource-tree', {
-        rootVisible: false,
+        showRootNode: false,
         selectable: {
             mode: 'nested',
             onSelect: updateValue,
