--- a/app/design/adminhtml/default/default/template/api2/attribute/resource.phtml
+++ b/app/design/adminhtml/default/default/template/api2/attribute/resource.phtml
@@ -55,7 +55,7 @@
     }
 
     const tree = new MahoTree('resource-tree', {
-        rootVisible: false,
+        showRootNode: false,
         selectable: {
             mode: 'nested',
             onSelect: updateValue,
