--- a/app/design/adminhtml/default/default/template/catalog/category/checkboxes/tree.phtml
+++ b/app/design/adminhtml/default/default/template/catalog/category/checkboxes/tree.phtml
@@ -18,7 +18,7 @@
 
 <script type="module">
     const tree = new MahoTree('<?= $divId ?>', {
-        rootVisible: false,
+        showRootNode: false,
         lazyload: {
             nodeParameter: 'id',
             dataUrl: '<?= $this->getLoadTreeUrl() ?>',
