--- a/app/design/adminhtml/default/default/template/permissions/rolesedit.phtml
+++ b/app/design/adminhtml/default/default/template/permissions/rolesedit.phtml
@@ -52,7 +52,7 @@
     }
 
     const tree = new MahoTree('resource-tree', {
-        rootVisible: false,
+        showRootNode: false,
         selectable: {
             mode: 'nested',
             onSelect: updateValue,
