--- a/app/design/adminhtml/default/default/template/catalog/wysiwyg/js.phtml
+++ b/app/design/adminhtml/default/default/template/catalog/wysiwyg/js.phtml
@@ -4,98 +4,7 @@
  *
  * @category    design
  * @package     default_default
- * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
- * @copyright   Copyright (c) 2022-2023 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
-<script type="text/javascript">
-//<![CDATA[
-
-Window.keepMultiModalWindow = true;
-var catalogWysiwygEditor = {
-    overlayShowEffectOptions : null,
-    overlayHideEffectOptions : null,
-    open : function(editorUrl, elementId) {
-        if (editorUrl && elementId) {
-            new Ajax.Request(editorUrl, {
-                parameters: {
-                    element_id: elementId+'_editor',
-                    store_id: '<?= $this->getStoreId() ?>'
-                },
-                onSuccess: function(transport) {
-                    try {
-                        this.openDialogWindow(transport.responseText, elementId);
-                    } catch(e) {
-                        alert(e.message);
-                    }
-                }.bind(this)
-            });
-        }
-    },
-    openDialogWindow : function(content, elementId) {
-        this.overlayShowEffectOptions = Windows.overlayShowEffectOptions;
-        this.overlayHideEffectOptions = Windows.overlayHideEffectOptions;
-        Windows.overlayShowEffectOptions = {duration:0};
-        Windows.overlayHideEffectOptions = {duration:0};
-
-        Dialog.confirm(content, {
-            draggable:true,
-            resizable:true,
-            closable:true,
-            className:"magento",
-            windowClassName:"popup-window",
-            title:'WYSIWYG Editor',
-            width:950,
-            height:680,
-            zIndex:1000,
-            recenterAuto:false,
-            hideEffect:Element.hide,
-            showEffect:Element.show,
-            id:"catalog-wysiwyg-editor",
-            buttonClass:"form-button",
-            okLabel:"Submit",
-            ok: this.okDialogWindow.bind(this),
-            cancel: this.closeDialogWindow.bind(this),
-            onClose: this.closeDialogWindow.bind(this),
-            firedElementId: elementId
-        });
-
-        content.evalScripts.bind(content).defer();
-        $(elementId+'_editor').value = $(elementId).value;
-    },
-    okDialogWindow : function(dialogWindow) {
-        if (dialogWindow.options.firedElementId) {
-            wysiwygObj = eval('wysiwyg'+dialogWindow.options.firedElementId+'_editor');
-            wysiwygObj.turnOff();
-            if (tinymce.get(wysiwygObj.id)) {
-                $(dialogWindow.options.firedElementId).value = tinymce.get(wysiwygObj.id).getContent();
-            } else {
-                if ($(dialogWindow.options.firedElementId+'_editor')) {
-                    $(dialogWindow.options.firedElementId).value = $(dialogWindow.options.firedElementId+'_editor').value;
-                }
-            }
-        }
-        this.closeDialogWindow(dialogWindow);
-    },
-    closeDialogWindow : function(dialogWindow) {
-        // remove form validation event after closing editor to prevent errors during save main form
-        if (typeof varienGlobalEvents != undefined && editorFormValidationHandler) {
-            varienGlobalEvents.removeEventHandler('formSubmit', editorFormValidationHandler);
-        }
-
-        //destroy the instance of editor
-        wysiwygObj = eval('wysiwyg'+dialogWindow.options.firedElementId+'_editor');
-        if (tinymce.get(wysiwygObj.id)) {
-            tinymce.get(wysiwygObj.id).remove();
-        }
-
-        dialogWindow.close();
-        Windows.overlayShowEffectOptions = this.overlayShowEffectOptions;
-        Windows.overlayHideEffectOptions = this.overlayHideEffectOptions;
-    }
-};
-
-//]]>
-</script>
