Rewrite Downloadable Information Product Tab

--- a/app/design/adminhtml/default/default/layout/catalog.xml
+++ b/app/design/adminhtml/default/default/layout/catalog.xml
@@ -35,6 +35,7 @@
             <action method="addJs"><name>sortable.min.js</name></action>
             <action method="addJs"><name>maho-tree.js</name></action>
             <action method="addJs"><name>mage/adminhtml/wysiwyg/catalog.js</name></action>
+            <action method="addJs"><name>mage/adminhtml/product/downloadable.js</name></action>
         </reference>
         <reference name="content">
             <block type="adminhtml/catalog_product_edit" name="product_edit"></block>
@@ -54,6 +55,7 @@
             <action method="addJs"><name>sortable.min.js</name></action>
             <action method="addJs"><name>maho-tree.js</name></action>
             <action method="addJs"><name>mage/adminhtml/wysiwyg/catalog.js</name></action>
+            <action method="addJs"><name>mage/adminhtml/product/downloadable.js</name></action>
         </reference>
         <reference name="content">
             <block type="adminhtml/catalog_product_edit" name="product_edit"></block>
