Rename hideInputs -> showInputs

--- a/app/design/adminhtml/default/default/template/catalog/category/widget/tree.phtml
+++ b/app/design/adminhtml/default/default/template/catalog/category/widget/tree.phtml
@@ -32,7 +32,7 @@
         },
         selectable: {
             mode: useMassaction ? 'simple' : 'radio',
-            hideInputs: !useMassaction,
+            showInputs: useMassaction,
             allowDeselect: false,
             onSelect: <?= $this->getNodeClickListener() ?? 'null' ?>,
         },
