--- a/app/design/adminhtml/default/default/template/cms/browser/tree.phtml
+++ b/app/design/adminhtml/default/default/template/cms/browser/tree.phtml
@@ -36,7 +36,7 @@
         },
         selectable: {
             mode: 'radio',
-            hideInputs: true,
+            showInputs: false,
             onSelect: ([node]) => {
                 MediabrowserInstance.selectFolder(node);
             },
