--- a/app/design/adminhtml/default/default/template/urlrewrite/categories.phtml
+++ b/app/design/adminhtml/default/default/template/urlrewrite/categories.phtml
@@ -36,7 +36,7 @@
         },
         selectable: {
             mode: 'single',
-            hideInputs: true,
+            showInputs: false,
             onSelect: (selected) => {
                 if (selected.length === 1) {
                     window.location = window.location + '/' + selected[0].id;
