--- a/app/design/adminhtml/default/default/template/login.phtml
+++ b/app/design/adminhtml/default/default/template/login.phtml
@@ -6,7 +6,7 @@
  * @package     default_default
  * @copyright   Copyright (c) 2006-2018 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2020-2024 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 
@@ -48,7 +48,7 @@
                             <a class="left" href="<?= Mage::helper('adminhtml')->getUrl('adminhtml/index/forgotpassword', ['_nosecret' => true]) ?>"><?= Mage::helper('adminhtml')->__('Forgot your password?') ?></a>
                             <input type="submit" class="form-button" value="<?= Mage::helper('core')->quoteEscape(Mage::helper('adminhtml')->__('Login')) ?>" title="<?= Mage::helper('core')->quoteEscape(Mage::helper('adminhtml')->__('Login')) ?>" />
 
-                            <button type="button" id="passkey-login-btn" class="scalable" style="margin-left:15px;" onclick="MahoPasskey.startAuthentication()">
+                            <button type="button" id="passkey-login-btn" class="form-button" style="width:100%;margin-top:10px">
                                 <?php echo $this->__('Login with Passkey') ?>
                             </button>
                         </div>
@@ -127,6 +127,39 @@
                         }
                     }
                 }
+
+                async function startPasskeyAuthentication() {
+                    const username = document.getElementById('username').value;
+                    if (!username) {
+                        alert('Please enter your username first');
+                        return;
+                    }
+
+                    try {
+                        const credential = await navigator.credentials.get({
+                            publicKey: {
+                                challenge: new Uint8Array(32),
+                                rpId: window.location.hostname,
+                                userVerification: 'required',
+                            }
+                        });
+
+                        const passkeyResponse = {
+                            id: credential.id,
+                            response: {
+                                authenticatorData: btoa(String.fromCharCode(...new Uint8Array(credential.response.authenticatorData))),
+                                clientDataJSON: btoa(String.fromCharCode(...new Uint8Array(credential.response.clientDataJSON))),
+                                signature: btoa(String.fromCharCode(...new Uint8Array(credential.response.signature)))
+                            }
+                        };
+
+                        document.getElementById('login').value = JSON.stringify(passkeyResponse);
+                        document.getElementById('loginForm').submit();
+                    } catch (err) {
+                        alert('Passkey authentication failed: ' + err.message);
+                    }
+                }
+                document.getElementById('passkey-login-btn').addEventListener('click', startPasskeyAuthentication);
             </script>
         </div>
     </div>
