--- a/app/design/frontend/rwd/default/template/review/product/view/list.phtml
+++ b/app/design/frontend/rwd/default/template/review/product/view/list.phtml
@@ -11,39 +11,37 @@
  */
 ?>
 
-<?php $_items = $this->getReviewsCollection()->getItems();?>
+<?php $_items = $this->getReviewsCollection()->getItems() ?>
 <div class="box-collateral box-reviews" id="customer-reviews">
     <?php if (count($_items)):?>
-        <div class="review-heading">
-            <h2>
-                <?= $this->__('Customer Reviews') ?>
-                <span><?= count($_items) ?> item(s)</span>
-            </h2>
-            <?= $this->getChildHtml('toolbar') ?>
-        </div>
         <dl>
         <?php foreach ($_items as $_review):?>
+            <?php $_votes = $_review->getRatingVotes() ?>
             <dt>
-                <?= $this->escapeHtml($_review->getTitle()) ?>
+                <?= $this->escapeHtml($_review->getNickname()) ?> -
+                <em><?= $this->formatDate($_review->getCreatedAt()) ?></em>
             </dt>
             <dd>
-                <?php $_votes = $_review->getRatingVotes(); ?>
+                <?php if (count($_votes) == 1): ?>
+                    <?php foreach ($_votes as $_vote): ?>
+                        <div class="rating-box">
+                            <div class="rating" style="width:<?= $_vote->getPercent() ?>%"></div>
+                        </div>
+                        <?php break ?>
+                    <?php endforeach ?>
+                <?php endif ?>
+                <strong><?= $this->escapeHtml(ucfirst($_review->getTitle())) ?></strong><br />
+                <?= nl2br($this->escapeHtml(ucfirst($_review->getDetail()))) ?>
 
-                <?= nl2br($this->escapeHtml($_review->getDetail())) ?>
-
-                <?php if (count($_votes)): ?>
+                <?php if (count($_votes) > 1): ?>
                 <table class="ratings-table">
-                    <colgroup>
-                        <col class="review-label" />
-                        <col class="review-value" />
-                    </colgroup>
                     <tbody>
                         <?php foreach ($_votes as $_vote): ?>
                         <tr>
                             <th><?= $this->escapeHtml($_vote->getRatingCode()) ?></th>
                             <td>
                                 <div class="rating-box">
-                                    <div class="rating" style="width:<?= $_vote->getPercent() ?>%;"></div>
+                                    <div class="rating" style="width:<?= $_vote->getPercent() ?>%"></div>
                                 </div>
                             </td>
                         </tr>
@@ -51,13 +49,6 @@
                     </tbody>
                 </table>
                 <?php endif ?>
-
-
-                <span class="review-meta">
-                    <?= $this->__('Review by %s', $this->escapeHtml($_review->getNickname())) ?>
-                    /
-                   <?= $this->__('(Posted on %s)', $this->formatDate($_review->getCreatedAt()), 'long') ?>
-                </span>
             </dd>
         <?php endforeach ?>
         </dl>
